# gallocy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DESIGN.md  Makefile  README.md  VERSION  build  project  sample-config.json
CMakeModules/: CodeCoverage.cmake
cthulhu/: README.md  setup.cfg  setup.py
gallocy/: CMakeLists.txt  client.cpp  config.cpp  config.h  constants.cpp  constants.h  diff.cpp  diff.h  entrypoint.cpp  httpd.c  httpd.cpp  httpd.h  internal.cpp  libgallocy.cpp  libgallocy.h  logging.cpp  models.cpp  pagetable.cpp  pagetable.h  peer.cpp  request.cpp  request.h  rest.cpp  server.cpp  shared.cpp  sqlite.cpp  stringutils.cpp  stringutils.h  threads.cpp  threads.h  wrapper.cpp
gallocy/allocators/: internal.cpp  shared.cpp
gallocy/common/: peer.cpp
gallocy/consensus/: client.cpp  log.cpp  machine.cpp  server.cpp  state.cpp
gallocy/gallocy/: client.h  config.h  diff.h  entrypoint.h  http_router.h  httpd.h  libgallocy.h  logging.h  models.h  objutils.h  pagetable.h  request.h  server.h  stringutils.h  threads.h
gallocy/gallocy/allocators/: application.h  internal.h  shared.h
gallocy/gallocy/glibc/: time.h
gallocy/gallocy/heaplayers/: application.h  debugheap.h  guard.h  heaptypes.h  hldefines.h  internal.h  lockedheap.h  pagetableheap.h  shared.h  singleton.h  sizeheap.h  source.h  spinlock.h  stl.h
gallocy/glibc/: README.md  time.c
gallocy/heaplayers/: addheap.h  debugheap.h  firstfitheap.h  freelistheap.h  freesllist.h  hash.h  heaptypes.h  lockedheap.h  myhashmap.h  pagetableheap.h  sizeheap.h  source.h  spinlock.h  statsheap.h  stdlibheap.h  stl.h  zoneheap.h
gallocy/http/: client.cpp  request.cpp  response.cpp  transport.cpp
gallocy/include/gallocy/: config.h  entrypoint.h  http_router.h  objutils.h  peer.h  request.h  sqlite.h  worker.h
gallocy/include/gallocy/allocators/: internal.h
gallocy/include/gallocy/common/: peer.h
gallocy/include/gallocy/consensus/: client.h  log.h  machine.h  server.h  state.h  timer.h
gallocy/include/gallocy/heaplayers/: addheap.h  application.h  debugheap.h  firstfitheap.h  freesllist.h  guard.h  hash.h  hldefines.h  internal.h  lockedheap.h  myhashmap.h  pagetableheap.h  shared.h  singleton.h  sizeheap.h  source.h  stdlibheap.h  stl.h
gallocy/include/gallocy/http/: client.h  request.h  response.h  router.h  transport.h
gallocy/include/gallocy/utils/: config.h  constants.h  diff.h  http.h  logging.h  objutils.h  stringutils.h
gallocy/utils/: config.cpp  constants.cpp  diff.cpp  http.cpp  logging.cpp  stringutils.cpp
integration/: test.sh
integration/helpers/: leader_election.py
opt/: CMakeLists.txt
resources/: CREDITS.md  DEVELOPERS.md  IMPLEMENTATION.md  NUTSHELL.md  REFERENCES.md
resources/implementation/: API.md
src/: libgallocy.cpp  libgallocy.h  pagetable.cpp  pagetable.h  wrapper.cpp
src/heaplayers/: firstfitheap.h  freelistheap.h  guard.h  myhashmap.h  pagetableheap.h  source.h  spinlock.h  stl.h  zoneheap.h
src/heaps/: source.h  stl.h
src/heaps/util/: linkedlist.h
test/: CMakeLists.txt  double-ptr.c  gtest.cc  gtest.cpp  hashmap.cpp  mmult.c  mmult.cpp  nested-malloc.c  simple-free.c  simple-free.cpp  simple-malloc.cpp  simple.c  sqlite.c  stlallocator-test.c  test.c  test_config.cpp  test_consensus.cpp  test_consensus_server.cpp  test_consensus_state.cpp  test_consensus_timer.cpp  test_constants.cpp  test_diff.cpp  test_free.cpp  test_freesllist.cpp  test_http_client.cpp  test_httpd.cpp  test_internal_allocator.cpp  test_json.cpp  test_logging.cpp  test_malloc.cpp  test_mmult.cpp  test_models.cpp  test_nested_malloc.cpp  test_pagetable.cpp  test_peer.cpp  test_simple_malloc.cpp  test_singleton.cpp  test_stlallocator.cpp  test_stringutils.cpp  test_threads.cpp  (+1 more)
test/data/: config-no-peers.json  gallocy-config.json
tools/: Dockerfile  build-container.sh  cleanup-containers.sh  cleanup-images.sh  control  gallocy.init  load.py  make_config.py  make_deployment.py  make_package.py  run.sh  start-container.sh  stop-all.sh
tools/etc/: config.json
